# game-of-life-archive

./: CMakeLists.txt  README.md
src/life/: main.cpp
src/lifelib/: GameOfLife.cpp  GameOfLife.h  gui.cpp  gui.h
test/: test_GameOfLife.cpp  test_gui.cpp
